add abstract LogReportGenerator