@@ -5,7 +5,6 @@ import edu.project3.logWorkers.LogRecord;
 import edu.project3.reports.LogReport;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class Main {
     private Main() {
@@ -21,9 +20,10 @@ public class Main {
         LogReader logReader = new LogReader();
         List<LogRecord> logs = logReader.readLogs(ParseInput.getLogPath(),
             ParseInput.getFrom(), ParseInput.getTo()
-        ).collect(Collectors.toList());
+        ).toList();
 
-        LogReport.generateReportAndWriteToFile(logs, ParseInput.getLogPath(),
+        LogReport logReport = new LogReport();
+        logReport.generateReportAndWriteToFile(logs, ParseInput.getLogPath(),
             ParseInput.getFrom(), ParseInput.getTo(), ParseInput.getOutputFormat()
         );
     }
